--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
-<div class="page">{% block page %} {% endblock %}</div>
+<div class="page">
+    {% block page %}
+
+    {% endblock %}
+</div>
 </body>
 </html>
