--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,7 @@
 </head>
 <body>
 <div class="page">
-    {% block page %}
-
-    {% endblock %}
+    {% block page %}{% endblock %}
 </div>
 </body>
 </html>
