--- a/templates/task/task_create.html
+++ b/templates/task/task_create.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Add Task
+{% endblock %}
 {% block page %}
 <div class="main-content">
     <div class="task-form">
