--- a/templates/task/index.html
+++ b/templates/task/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-    Task Manager
+    Single Man Task Manager
 {% endblock %}
 {% block page %}
 <div class="main-content">
