--- a/templates/boot.html
+++ b/templates/boot.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src='{% static 'js/main.js' %}s'></script>
-    <title>Task Manager</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'main2.css' %}">
@@ -14,7 +14,7 @@
     <a class="navbar-home" href="{% url 'home' %}">Home</a>
     <div class="navbar-links">
         {% if user.is_authenticated %}
-        <a class="nav-link" href="{% url 'task-done' %}">Done tasks</a></li>
+        <a class="nav-link" href="{% url 'task-done' %}">Done tasks</a>
         <a class="nav-link" href="#">{{ user.username }}</a>
         <a class="nav-link" href="{% url 'log_out' %}">Log out</a>
         {% else %}
@@ -23,9 +23,6 @@
         {% endif %}
     </div>
 </nav>
-<header class="header">
-
-</header>
-{#{% block page %}{% endblock %}#}
+{% block page %}{% endblock %}
 </body>
 </html>
