--- a/templates/task/task_create.html
+++ b/templates/task/task_create.html
@@ -1,19 +1,28 @@
-{% extends 'base.html' %}
+{% extends 'boot.html' %}
+{% load bootstrap5 %}
 {% block title %}
-    Add Task
+    Create task
 {% endblock %}
 {% block page %}
-<div class="main-content">
-    <div class="task-form">
-        <form method="post" class="task-create">
+    <div class="auth-container">
+        <form class="log-form" method="post">
+            <h2>Log in</h2>
             {% csrf_token %}
-            {% for elem in form %}
-               <div class="{{ elem.id_for_label }}">
-                   {{ elem.label_tag }} {{ elem }}
-               </div>
-            {% endfor %}
-            <p><input type="submit" class="button" value="Add task"></p>
+            {% bootstrap_form form %}
+            <p><input type="submit" class="button" value="Log in"></p>
         </form>
     </div>
-</div>
+{#<div class="main-content">#}
+{#    <div class="task-form">#}
+{#        <form method="post" class="task-create">#}
+{#            {% csrf_token %}#}
+{#            {% for elem in form %}#}
+{#               <div class="{{ elem.id_for_label }}">#}
+{#                   {{ elem.label_tag }} {{ elem }}#}
+{#               </div>#}
+{#            {% endfor %}#}
+{#            <p><input type="submit" class="button" value="Add task"></p>#}
+{#        </form>#}
+{#    </div>#}
+{#</div>#}
 {% endblock %}
