--- a/templates/task/index.html
+++ b/templates/task/index.html
@@ -1,7 +1,5 @@
 {% extends 'boot.html' %}
-{% block title %}
-    Single Man Task Manager
-{% endblock %}
+{% block title %}Single Man Task Manager{% endblock %}
 {% block page %}
 <div class="tasks">
     <div class="task-create-link">
