--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,8 +1,6 @@
 {% extends 'boot.html' %}
 {% load bootstrap5 %}
-{% block title %}
-    Sign Up
-{% endblock %}
+{% block title %}Sign Up{% endblock %}
 {% block page %}
     <div class="auth-container">
         <form class="log-form" method="post">
@@ -13,12 +11,3 @@
         </form>
     </div>
 {% endblock %}
-
-
-{#{% for elem in form %}#}
-{#                <div class="log-form-detail">#}
-{#                    <p class="label-tag">{{ elem.label_tag }}</p>#}
-{#                    <p class="elem">{{ elem }}</p>#}
-{#                    <p class="error">{{ elem.errors }}</p>#}
-{#                </div>#}
-{#            {% endfor %}#}
